--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
 <body>
     <div class="hero">
         <button id="size">Change grid size</button>
-        <button></button>
-        <button></button>
+        <button id="color">Change Color</button>
+        <button id="clear">Clear</button>
     </div>
 
     <div id="container" class="container"></div>
