add: new custom button and final touch to make fully interactive

--- a/index.html
+++ b/index.html
@@ -10,8 +10,9 @@
 <body>
     <div class="hero">
         <button id="size">Change grid size</button>
-        <button id="color">Change Color</button>
+        <button id="color">Change Color of all</button>
         <button id="clear">Clear</button>
+        <button id="custom">custom color</button>
     </div>
 
     <div id="container" class="container"></div>
