--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
         <button id="color">Change Color of all</button>
         <button id="clear">Clear</button>
         <button id="custom">custom color</button>
+        <button id="random">randomize</button>
     </div>
 
     <div id="container" class="container"></div>
